# tau-anomaly-detection

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  eda.py  feature_engineer.py  pyproject.toml  run.py  tune.py
.github/workflows/: ci.yml
configs/: config.yaml
configs/ml_regions/: default.yaml
configs/model/: ae.yaml  vae.yaml
configs/pipeline/: default.yaml
configs/tuning/: default.yaml
notebooks/: 00_overview.ipynb  01_preprocessing.ipynb  02_feature_engineering.ipynb  03_eda.ipynb  04_hyperparameter_tuning.ipynb  05a_ae.ipynb  05a_ae_training.ipynb  05b_vae.ipynb  05b_vae_training.ipynb  06_evaluation.ipynb  06a_ae_evaluation.ipynb  06b_vae_evaluation.ipynb
src/: utils.py
src/eda/: checks.py  plots.py  utils.py
src/models/: ae.py  anomaly.py  callbacks.py  config.py  datamodule.py  evaluation.py  latent.py  plots.py  splits.py  tuning.py  vae.py
src/pipelines/: eda.py  evaluate.py  feature_engineer.py  train.py  tune.py
src/processing/: analysis.py  features.py  merger.py  processor.py  rectangularizer.py  validation.py
src/serving/: app.py  registry.py  schemas.py
tests/: test_ae.py  test_anomaly.py  test_datamodule.py  test_evaluation.py  test_latent.py  test_placeholder.py  test_serving.py  test_splits.py  test_tuning.py  test_vae.py
